# videolane

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  tsconfig.json
demo/: script.md  storyboard.md
demo/input/: tera-study-script.md  videolane-demo-script.md
docs/: API.md  CLI.md  INSTALL.md  MCP.md  ROADMAP.md  SDK.md  SECURITY.md
python/: README.md  pyproject.toml
python/talocode_videolane/: __init__.py  cli.py  client.py
python/tests/: test_client.py  test_plan.py
scripts/: build.mjs  make-demo-video.mjs  release-notes.mjs  smoke-test.mjs  test-mcp.mjs  voiceover.py
src/: cli.ts  index.ts
src/api/: server.ts
src/core/: audio.ts  browser.ts  captions.ts  config.ts  errors.ts  metadata.ts  package.ts  plan.ts  project.ts  recorder.ts  renderer.ts  script.ts  shorts.ts  storage.ts  storyboard.ts  thumbnail.ts  voiceover.ts  youtube.ts
src/mcp/: server.ts
src/test/: core.test.ts
templates/launch-video/: videolane.json
templates/product-demo/: prompts.md  script.md  storyboard.md  videolane.json
templates/shorts-demo/: videolane.json
templates/tera-tutorial/: videolane.json
templates/youtube-tutorial/: videolane.json
